--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,7 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
+
 /* Log In */
 .login {
   padding-top: 2rem;
@@ -101,7 +102,8 @@ input {
 .email {
   margin: 1rem 0 0 0;
 }
-.button-login {
+.button-login,
+.buttonRegistrar {
   background: rgba(216, 178, 1, 1);
   border: none;
   width: 40%;
@@ -165,6 +167,22 @@ input {
 .singUp .img-chef img {
   margin-top: 0;
   width: 55%;
+}
+.buttonRegistrar {
+  margin-top: 1rem;
+}
+.return {
+  background-color: rgba(216, 178, 1, 1);
+  display: flex;
+  height: 2.3rem;
+  width: 2rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.return i {
+  font-size: 1.5rem;
+  color: white;
 }
 
 /* Post */
@@ -270,7 +288,7 @@ input {
   height: 2rem;
 }
 .fas {
-  width: 2rem;
+  font-size: 2rem;
 }
 
 /* Profile */
