--- a/src/style.css
+++ b/src/style.css
@@ -312,3 +312,34 @@ input {
   padding: 32px 24px 16px;
   border-radius: 24px;
 }
+.requisito{
+  font-size: 0.7rem;
+  text-align: center;
+  width: 50%;
+  color: var(--alice-blue);
+  margin-bottom: 1rem;
+}
+.requisito-invalidEmail{
+  font-size: 0.8rem;
+  text-align: center;
+  width: 50%;
+  color: var(--red-pepper);
+  margin-bottom: 1rem;
+  display: none;
+}
+.requisito-emailInUse{
+  font-size: 0.8rem;
+  text-align: center;
+  width: 50%;
+  color: var(--red-pepper);
+  margin-bottom: 1rem;
+  display: none;
+} 
+.requisito-passwordVulnerable{
+  font-size: 0.8rem;
+  text-align: center;
+  width: 50%;
+  color: var(--red-pepper);
+  margin-bottom: 1rem;
+  display: none;
+}
