--- a/src/style.css
+++ b/src/style.css
@@ -228,6 +228,7 @@ input {
   width: 87%;
   height: 54%;
   border-radius: 0.7rem;
+  border: none;
 }
 .btnToCreate {
   display: flex;
@@ -255,6 +256,8 @@ input {
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .postedOne {
   background-color: rgba(255, 255, 255, 0.6);
