--- a/src/style.css
+++ b/src/style.css
@@ -361,13 +361,25 @@ input {
   margin-bottom: 1rem;
   display: none;
 }
-.modalErrorSinUp{
-  display: block;
-  /*top: 0;
+.modalErrorLogin{
+  display: none; 
+  color: var(--imperial-red);
+  font-size: 2rem;
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 72%; 
   left: 0;
-  background: rgba(0, 0, 0, 0.226);
-  position: absolute;
-  height: 100vh;
+  top: 0;
   width: 100%;
-  display: none;*/
+  height: 100%; 
+  overflow: auto; 
+ 
+  background-color: rgba(0,0,0,0.4);
+}
+
+.close{
+  display: flex;
+  justify-content: end;
+  padding-right: 1rem;
+  font-size: 2.5rem;
 }
