--- a/src/style.css
+++ b/src/style.css
@@ -264,7 +264,9 @@ input {
   color: black;
   border-radius: 1rem;
   text-align: -webkit-center;
-  box-sizing: border;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 .postedOneTitle {
   height: 3rem;
@@ -273,17 +275,12 @@ input {
   padding-top: 14px;
 }
 .postedText {
-  padding-top: -1rem;
-  /* background-color: var(--imperial-red); */
   height: 3rem;
   width: 20rem;
 }
 .postedBtns {
   height: 1rem;
   width: 10rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
 }
 .likePosted,
 .sharePosted {
@@ -333,14 +330,14 @@ input {
   padding: 32px 24px 16px;
   border-radius: 24px;
 }
-.requisito{
+.requisito {
   font-size: 0.7rem;
   text-align: center;
   width: 50%;
   color: var(--alice-blue);
   margin-bottom: 1rem;
 }
-.requisito-invalidEmail{
+.requisito-invalidEmail {
   font-size: 0.8rem;
   text-align: center;
   width: 50%;
@@ -348,15 +345,7 @@ input {
   margin-bottom: 1rem;
   display: none;
 }
-.requisito-emailInUse{
-  font-size: 0.8rem;
-  text-align: center;
-  width: 50%;
-  color: var(--red-pepper);
-  margin-bottom: 1rem;
-  display: none;
-} 
-.requisito-passwordVulnerable{
+.requisito-emailInUse {
   font-size: 0.8rem;
   text-align: center;
   width: 50%;
@@ -364,23 +353,31 @@ input {
   margin-bottom: 1rem;
   display: none;
 }
-.modalErrorLogin{
-  display: none; 
+.requisito-passwordVulnerable {
+  font-size: 0.8rem;
+  text-align: center;
+  width: 50%;
+  color: var(--red-pepper);
+  margin-bottom: 1rem;
+  display: none;
+}
+.modalErrorLogin {
+  display: none;
   color: var(--imperial-red);
   font-size: 2rem;
-  position: fixed; 
-  z-index: 1; 
-  padding-top: 72%; 
+  position: fixed;
+  z-index: 1;
+  padding-top: 72%;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%; 
-  overflow: auto; 
- 
-  background-color: rgba(0,0,0,0.4);
+  height: 100%;
+  overflow: auto;
+
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-.close{
+.close {
   display: flex;
   justify-content: end;
   padding-right: 1rem;
