--- a/src/style.css
+++ b/src/style.css
@@ -216,7 +216,7 @@ input {
   align-items: center;
 }
 .createPostContainer {
-  background-color: rgb(73, 160, 120);
+  background-color: rgba(216, 178, 1, 1);
   width: 20rem;
   height: 10rem;
   border-radius: 1rem;
@@ -251,7 +251,11 @@ input {
   border-radius: 5px;
 }
 .btnShare {
+  background-color: rgb(73, 160, 120);
   width: 5rem;
+  height: 1.5rem;
+  border: none;
+  border-radius: 5px;
 }
 .posted {
   margin-top: 1.5rem;
@@ -283,12 +287,17 @@ input {
 .postedBtns {
   height: 3rem;
 }
+.postedBtns i {
+  font-size: 1rem;
+}
 .likePosted,
 .sharePosted,
 .editPosted,
 .deletePosted {
   width: 3rem;
   height: 2rem;
+  border: none;
+  border-radius: 1rem;
 }
 .fas {
   font-size: 2rem;
@@ -374,9 +383,9 @@ input {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgba(0,0,0,0.4);
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .close {
