--- a/src/style.css
+++ b/src/style.css
@@ -280,7 +280,7 @@ input {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.9);
   color: white;
-  top: 12.3rem;
+  padding-top: 1rem;
 }
 .postedOneTitle {
   height: 3rem;
@@ -405,7 +405,7 @@ input {
   font-size: 2.5rem;
 }
 
-.img{
+.img {
   height: 100px;
   border-radius: 15px;
 }
