--- a/src/style.css
+++ b/src/style.css
@@ -111,7 +111,7 @@ input {
 .buttonRegistrar {
   background: rgba(216, 178, 1, 1);
   border: none;
-  width: 40%;
+  width: 4rem;
   height: 1.5rem;
   border-radius: 10px;
   margin-top: 1rem;
@@ -182,6 +182,7 @@ input {
 }
 .buttonRegistrar {
   margin-top: 1rem;
+  width: 5rem;
 }
 .return {
   background-color: rgba(216, 178, 1, 1);
@@ -196,7 +197,11 @@ input {
   font-size: 1.5rem;
   color: white;
 }
-
+#bienvenida {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 /* Post */
 .modalContent {
   background-color: red;
@@ -339,6 +344,9 @@ input {
   border: none;
   border-radius: 1rem;
 }
+.liked {
+  color: red;
+}
 .likePosted {
   width: 4rem;
   display: flex;
@@ -466,6 +474,27 @@ input {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
+  /* Sign Up Section */
+  .singUp {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 93vw;
+    margin-top: 6.5rem;
+  }
+  .img-chef {
+    width: 46rem;
+    margin: 0 -11rem 0 4rem;
+  }
+  #signupImg {
+    width: 27rem;
+    margin: 0;
+  }
+  #generalForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   /* LogIn Section */
   #viewLogInGrid {
     grid-column: 1/4;
@@ -562,6 +591,9 @@ input {
   }
   .postedOneTitle {
     margin-right: 0;
+  }
+  .modalContent {
+    width: 8rem;
   }
   #linksGrid {
     grid-column: 3/4;
