--- a/style.css
+++ b/style.css
@@ -399,6 +399,8 @@ input {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 7rem;
+  margin-right: 7rem;
 }
 
 /* 404 */
